libreoffice (1:7.0.4-4) UNRELEASED; urgency=medium

  * debian/patches/apparmor-updates.diff: allow one more digit in temp
    files (closes: #982274)

 -- Rene Engelhard <rene@debian.org>  Thu, 11 Feb 2021 07:20:44 +0100

libreoffice (1:7.0.4-3) unstable; urgency=medium

  * debian/tests/control.in: *really* add libreoffice-writer dependency
    to uicheck-sc test

 -- Rene Engelhard <rene@debian.org>  Sun, 03 Jan 2021 18:54:17 +0100

libreoffice (1:7.0.4-2) unstable; urgency=medium

  * debian/test/control: make uicheck-sc depend on libreoffice-writer, too
    (the openDialogs/uno.Show:License Dialog test opens a new "Writer/Web"
    document...)

 -- Rene Engelhard <rene@debian.org>  Sat, 02 Jan 2021 20:17:12 +0100

libreoffice (1:7.0.4-1) unstable; urgency=medium

  * LibreOffice 7.0.4 final release (identical to rc2)

  * debian/patches/pdfium-m68k.diff: fix pdfium build on m68k

  * debian/rules, debian/control*in: s/noinsttests/noinsttest/, thanks
    lintian
  * debian/rules:
    - revert clang (>= 1:11) build-dep for buster-backports; doesn't exist in
      buster and we resort back to gcc
    - don't rm LICENSE.html, it is used by
      Help -> License Information -> Show License
  * debian/control.mediawiki.in: remove Homepage: (closes: #978713) 
  * debian/*.mime: stop quoting %s (closes: #950319)

 -- Rene Engelhard <rene@debian.org>  Thu, 31 Dec 2020 13:00:06 +0100

libreoffice (1:7.0.4~rc2-1) unstable; urgency=medium

  * New upstream release candidate

 -- Rene Engelhard <rene@debian.org>  Wed, 09 Dec 2020 20:05:22 +0100

libreoffice (1:7.0.4~rc1-1) unstable; urgency=medium

  * New upstream release candidate

  * debian/patches/unowinreg-static-libgcc.diff: use -static-libgcc, see
    LO master commit 01241113947fc7bd7f7b765dd897bb023c8ca99c

  * debian/rules:
    - set MYSQL_FLAVOUR=mariadb (as it's used anyway, and upstreams internal
      copy is mariadb-connector-c anyway) and build-depend on libmariadb-dev