@@ -451,6 +451,15 @@ Conflicts: libreoffice-avmedia-backend-vlc,
            libreoffice-core-nogui,
            libreoffice-filter-binfilter,
            libreoffice-mysql-connector (<< 1:6.2.0~)
+# for bullseye, copied from libreoffice-common, see #985297
+ ,
+ libreoffice-base (<< 1:7.0.0~alpha~),
+ libreoffice-calc (<< 1:7.0.0~alpha~),
+ libreoffice-draw (<< 1:7.0.0~alpha~),
+ libreoffice-impress (<< 1:7.0.0~alpha~),
+ libreoffice-math (<< 1:7.0.0~alpha~),
+ libreoffice-report-builder (<< 1:7.0.0~alpha~),
+ libreoffice-writer (<< 1:7.0.0~alpha~),
 Replaces: libreoffice-avmedia-backend-gstreamer,
           libreoffice-common (<< 1:6.3.0~rc1~),
           libreoffice-core-nogui,
