@@ -27,3 +27,17 @@ fi
 
 #DEBHELPER#
 
+# do this manually since dpkg-maintscript-helper dir_to_symlink
+# does not work reliably in this case because we cannot ensure that all
+# conflicting packages previously shipping files in
+# /usr/lib/libreoffice/share/registry are either upgraded or removed
+# but not just deconfigured, see #985297
+if [ "$1" = "configure" ] && dpkg --compare-versions "$2" lt-nl "1:7.0.4-4~" ; then
+	if [ ! -L /usr/lib/libreoffice/share/registry ]; then
+		if [ -d /usr/lib/libreoffice/share/registry ]; then
+			# this will fail if the directory is not yet empty
+			rmdir -v /usr/lib/libreoffice/share/registry
+		fi
+		ln -sfvT /etc/libreoffice/registry /usr/lib/libreoffice/share/registry
+	fi
+fi
