@@ -2,8 +2,18 @@ libreoffice (1:7.0.4-4) UNRELEASED; urgency=medium
 
   * debian/patches/apparmor-updates.diff: allow one more digit in temp
     files (closes: #982274)
+  * debian/control.in, debian/libreoffice-common.{maintscript,postinst.in}:
+    apply patch from Adreas Beckmann to fix upgrade buster->bullseye
+    - libreoffice-core: Copy some Conflicts from libreoffice-common for smoother
+      upgrades from buster. Dpkg will otherwise ignore Conflicts that are
+      encountered later against a package that is already deconfigured.
+    - libreoffice-common: Do not use dir_to_symlink for
+      /usr/lib/libreoffice/share/registry, the Breaks/Conflicts cascade does not
+      work reliable here to ensure all packages previously shipping files there
+      are either removed or upgraded first, but not just deconfigured. Fix up
+      the symlink in postinst instead.  (Closes: #985297)
 
- -- Rene Engelhard <rene@debian.org>  Thu, 11 Feb 2021 07:20:44 +0100
+ -- Rene Engelhard <rene@debian.org>  Sat, 01 May 2021 13:14:17 +0200
 
 libreoffice (1:7.0.4-3) unstable; urgency=medium
 
